# recipes

./: .gitignore  pyproject.toml
my_recipes/: recipes.py
recipes/: recipe.py
src/: find_recipes.py  ingredient.py  item.py  recipe.py  recipes.py  unit.py
tests/: test_recipe_similarity.py
