[tool.poetry]
name = "mealprepper"
version = "0.1.0"
description = ""
authors = ["Nils Gandlau <user.email=28842354+ngandlau@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
